--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/vue3": "^6.1.20",
     "@kodeglot/vue-calendar": "^1.5.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
